# air_combat_byRust

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  build-all.bat  docker-compose.yml
.github/workflows/: ci.yml
air_combat_anchor/: Anchor.toml  Cargo.toml  validator.json
air_combat_anchor/programs/battle_record/: Cargo.toml
app/src/idl/: battle_record.json
backup/: 1.rs  README.md  style_guide.md  test.rs
docs/: GRANT.md  ProblemSummary-anchorBuild.md  issue9.2_pause_record.md  solana_airdrop_debug_guide.md  solana_airdrop_debug_guide_v2.md  startup_guide.md  useAirdrop_guide.md
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/wasm_bridge/: package.json  wasm_bridge.d.ts  wasm_bridge.js  wasm_bridge_bg.wasm  wasm_bridge_bg.wasm.d.ts
frontend/src/: js_bridge.ts  main.ts
next_frontend/: .gitignore  global.d.ts  package.json  tsconfig.json
next_frontend/src/app/: globals.css  layout.tsx  page.css  page.tsx
next_frontend/src/components/: RecordBattleButton.css  RecordBattleButton.tsx  (+2 more)
programs/battle_record/: Anchor.toml  package-lock.json
src/: components.rs  lib.rs  main.rs  setup.rs
src/ai/: chase.rs  mod.rs
src/combat/: damage.rs  mod.rs  slash.rs  stagger.rs  ui.rs  velocity.rs
src/core/: camera.rs  input.rs  mod.rs  rotate.rs
src/onchain/: bindings.rs  client.rs  mod.rs
src/setup/: camera.rs  cube.rs  enemy.rs  ground.rs  light.rs  mod.rs  ui_camera.rs
src/shared/: mod.rs  types.rs
wasm_bridge/: Cargo.toml
wasm_bridge/src/: lib.rs
(+17 files in other folders)
