[package]
name = "air_combat"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.15.1"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
bincode = "1.3"
solana-sdk = "1.18"

# [workspace]
# members = ["air_combat", "programs/battle_record", "wasm_bridge",]

